--- a/crates/frontend/index.html
+++ b/crates/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tauri App</title>
     <link data-trunk rel="rust" />
-    <link data-trunk rel="tailwind-css" href="src/tailwind.css"/>
+    <link data-trunk rel="tailwind-css" href="tailwind.css"/>
   </head>
   <body></body>
 </html>
